# SDF

./: Cargo.toml  README.md
libs/sdf-enums/: Cargo.toml  README.md
libs/sdf-enums/benches/: circle_enum_benchmark.rs
libs/sdf-enums/src/: lib.rs
libs/sdf-nodes/: Cargo.toml  README.md
libs/sdf-nodes/benches/: circle_node_benchmark.rs  circle_scale_node_benchmark.rs
libs/sdf-nodes/src/: constant.rs  csg.rs  fold.rs  lib.rs  node.rs  ops.rs  sdf.rs  simplify.rs  transform.rs  variable.rs
libs/sdf-nodes/src/primitives/: box_dim.rs  capsule.rs  mod.rs  sphere.rs  torus.rs
libs/sdf-traits/: Cargo.toml  README.md
libs/sdf-traits/benches/: circle_benchmark.rs  circle_trait_benchmark.rs  sphere_scale_benchmark.rs
libs/sdf-traits/src/: csg.rs  lib.rs  sdf.rs  transform.rs
libs/sdf-traits/src/ops/: abs.rs  add.rs  addop.rs  clamp.rs  constant.rs  div.rs  length.rs  lengthop.rs  max.rs  max_comp.rs  min.rs  mod.rs  mul.rs  neg.rs  negop.rs  noop.rs  sub.rs  subop.rs  swizzle.rs  variable.rs  vecop.rs
libs/sdf-traits/src/primitives/: box_dim.rs  circle.rs  mod.rs  torus.rs
libs/sdf-vecs/: Cargo.toml  README.md
libs/sdf-vecs/src/: component_access.rs  dimension.rs  lib.rs  scale.rs  swizzle.rs  transform.rs  vec_1.rs  vec_2.rs  vec_3.rs  vec_4.rs  vec_type.rs
libs/sdf-vecs/src/ops/: abs.rs  add.rs  clamp.rs  div.rs  length.rs  max.rs  min.rs  mod.rs  mul.rs  neg.rs  sub.rs
