[package]
name = "sdf-traits"
version = "0.1.0"
authors = ["Lando <lando.schumpich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdf-vecs = { path = "../sdf-vecs" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "circle_trait_benchmark"
harness = false